--- a/src/app/components/rooms/rooms.component.html
+++ b/src/app/components/rooms/rooms.component.html
@@ -80,6 +80,7 @@
                         <div  style="height: 45%;">
                             <h6>Nurse station</h6>
                             <p>{{log}}</p>
+                            <p> <a [routerLink]="['/diagnosis']"  [hidden]="showLink" >Proceed to diagnosis</a> </p>
                         </div>
                         <div style="height: 45%;" class="bt">
                             <h6>Lab</h6>
