--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -1,7 +1,7 @@
 
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
         
-        <span class="fs-4"><i class="bi bi-brightness-alt-high"></i> Welcome Nurse</span>
+        <span class="fs-4"><i class="bi bi-brightness-alt-high"></i> Welcome {{role}}</span>
       </a>
       <hr>
 <ul class="nav nav-pills flex-column mb-auto">
@@ -51,6 +51,6 @@ Logout
 <div class="dropdown">
 <a href="#" class="d-flex align-items-center link-dark text-decoration-none" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
 <span class="fs-4"><i class="bi bi-box-arrow-in-right me-2"></i></span> 
-<strong>user email here</strong>
+<strong>{{email}}</strong>
 </a>
 </div>
