--- a/src/app/components/doctor/doctor.component.html
+++ b/src/app/components/doctor/doctor.component.html
@@ -1,21 +1,19 @@
-
-<div class="background">
-
-  <br>
-  <div class = "row">
-      <div class="col-sm-5 logo">
-  </div>
-<div class= title><h1>Doctor</h1></div>
-    <button class="btn btn-top-left" (btnClick) = "goBack()" text = "Back"></button>
-
-    <div class="row">
-        <div class="col-sm-7"></div>
-    <button class="Button3 col-sm-2" type="button" (click) = "routeToAdd()" >Add patient options</button>
-    <button class="Button3 col-sm-2" type="button" (click) = "viewUserInfo()" >View user info will go away after navbar is added</button>
-    
-    </div>
-
-
+<div class="container-full">
+    <div class="container-fluid h100">
+        <div class="row h100">
+            <div class="col-md-2 p-3 bg-light sidebar">
+                <app-side-bar class="d-flex flex-column flex-shrink-0 h100"></app-side-bar>
+            </div>
+            <div class="col-md-10 align-self-center">
+                <div class="mainbox">
+                    <div class="row">
+                        <div class="col-md-12 p-5">
+                            <div class="mb-5">
+                                <img src="/assets/img/WellNetLogo.jpg" alt="">
+                            </div>
+                            <h4 class="mb-4">Patient search</h4>
+ 
+      
     <!-- <div id = "TempDiv">
         <h1> All Patients Available (Displaying Available Fields) </h1>
 
@@ -64,60 +62,70 @@
     </table>
 
     </div> -->
-<div class="row"></div>
-    <div class="search-area">
-    <div class="form-group">
-        <div class="title">
-            <h3>Patient search</h3>
-        </div>
+
+
+    <div class="mb-4">
+
         
-        <!-- <label for="patient-search">Search for Patients</label> -->
-        First name:
-        <input type="text" class="form-control Input" id="firstName" #firstName name="firstName" placeholder="Enter First Name" required>
-        Last name:
-        <input type="text" class="form-control" id="lastName" #lastName  name="lastName" placeholder="Enter Last Name" required>
-   
+        <ul class="list-group list-group-horizontal">
+            <li class="list-group-item">
+                First name:
+                <input type="text" class="form-control Input" id="firstName" #firstName name="firstName" placeholder="Enter First Name" required>
+            </li>
+            <li class="list-group-item">
+                Last name:
+                <input type="text" class="form-control" id="lastName" #lastName  name="lastName" placeholder="Enter Last Name" required>
+            </li>
+            <li class="list-group-item">
+                <label for= "dob">Date of Birth:</label>
+                <input size=12
+                    type= "date"
+                    class= "form-control "
+                    name= "dob"
+                    id= "dob"
+                    #dobField
+                    placeholder="Date of birth (mm/dd/yyyy)"
+                > 
+            </li>
+            <li class="list-group-item">
+                Search by
+                <select class="form-select" #filter aria-label="Default select example">
+                    <option value="1">Display all patients</option>
+                    <option value="2">First name</option>
+                    <option value="3">First name and last name</option>
+                    <option value="4">First name, last name and date of birth</option>
+                  </select>
+            </li>
+            <li class="list-group-item">
+                <br>
+                <button id="searchId" class="btn btn-outline-success" (click)="applyfilter(firstName.value, lastName.value, dobField.value, filter.value)" >Search</button>
+            </li>
+        </ul>
 
-    <label for= "dob">Date of Birth:</label>
-    <input
-        type= "date"
-        class= "form-control"
-        name= "dob"
-        id= "dob"
-        #dobField
-        placeholder="Date of birth (mm/dd/yyyy)"
-    > 
 
-    <div class="btnRow">
+    <div  hidden>
          <button id="searchId" class="Button2" (click)="getAllPatients()" text="Display All Patients">Display all patients</button>
         <button id="searchName"  class="Button2" (click)="searchPatByFName(firstName.value)" text="Search for Patients by First Name">Search for patients by first name</button>
         <button id="searchFullName"  class="Button2" (click)="searchPatByFullName(firstName.value, lastName.value)" text="Search for Patients by Last Name">Search for patients by first name and last name</button>
         <button id="searchDOB" class="Button2" (click)="searchPatNameDate(firstName.value, lastName.value, dobField.value)" text="Search for Patients by First, Last, and Date of Birth">Search for patients by first name, last name and date of birth</button>
     </div>
     </div>
-</div>
 
-<div class="DoctorSearchArea">
 
-    <div class="form-group">
-        <div class="title">
-            <h3>Patient search (by Doctor)</h3>
-        </div>
+    <h4 class="mb-4" >Patient search (by Doctor)</h4>
+
+    <div class="mb-4">
         
-        <!-- <label for="patient-search">Search for Patients</label> -->
-        <input type="text" class="form-control" id="doctorFirstName" #doctorFirstName name="doctorFirstName" placeholder="Enter First Name" required>
-        <input type="text" class="form-control" id="doctorLastName" #doctorLastName  name="doctorLastName" placeholder="Enter Last Name" required>
-        <button id="searchDoctor" class="Button2" (click)="searchByDoctor(doctorFirstName.value, doctorLastName.value)" text="Search By Doctor">Search by doctor</button>
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item"><input type="text" class="form-control" id="doctorFirstName" #doctorFirstName name="doctorFirstName" placeholder="Enter First Name" required></li>
+                <li class="list-group-item"><input type="text" class="form-control" id="doctorLastName" #doctorLastName  name="doctorLastName" placeholder="Enter Last Name" required></li>
+                <li class="list-group-item"><button id="searchDoctor" class="btn btn-outline-success" (click)="searchByDoctor(doctorFirstName.value, doctorLastName.value)" text="Search By Doctor">Search by doctor</button></li>
+            </ul>    
     </div>
 
-
-    
-
-</div>
-<div class="title"><h3>Patients</h3></div>
-    <div class="table">
+<h4 class="mb-4">Patients</h4>
         
-        <table>
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>Prescribe Treatment</th>
@@ -137,11 +145,11 @@
             </thead>
             <tbody>
                 <tr *ngFor="let patient of patientsArray">
-                    <td><button (click)="diagnosePatient(patient)"></button></td>
+                    <td class="tdc"><a style="font-size: larger;" (click)="diagnosePatient(patient)"><i class="bi bi-bandaid"></i></a></td>
                     <td *ngIf="searchingDoctor"> {{doctorName}}</td>
                     <td>{{patient.firstName}}</td>
                     <td>{{patient.lastName}}</td>
-                    <td>{{patient.dob}}</td>
+                    <td class="tdc">{{patient.dob}}</td>
                     <!-- <td>{{patient.dob}}</td> -->
                     <td>
                         <ul>
@@ -150,8 +158,8 @@
                             </li>
                         </ul>
                     </td>
-                    <td>{{patient.height}}"</td>
-                    <td>{{patient.weight}} lbs</td>
+                    <td class="tdc">{{patient.height}}"</td>
+                    <td class="tdc">{{patient.weight}} lbs</td>
                     <td>
                         <ul>
                             <li  *ngFor = "let vax of patient.patientVaccinations">
@@ -160,14 +168,20 @@
                         </ul>
                         <!-- {{patient.vaccinations[0].vaccination}} -->
                     </td>
-                    <td *ngIf="!patient.bloodType"></td>
-                    <td *ngIf="patient.bloodType">{{patient.bloodType.type}}</td>
-                    <td>{{patient.sex.sex}}</td>
+                    <td class="tdc" *ngIf="!patient.bloodType"></td>
+                    <td class="tdc" *ngIf="patient.bloodType">{{patient.bloodType.type}}</td>
+                    <td class="tdc" >{{patient.sex.sex}}</td>
                     <td>{{patient.doctor}}</td>
                 </tr>
             </tbody>
         </table>
-    </div>
+  
 
+         
+                        
 </div>
-<button class="Button3 col-sm-2" type="button" (click) = "logout()" >Logout will go away once navbar is made</button>
+</div>
+</div>
+</div>
+</div>
+</div>
