--- a/src/app/components/nurse/nurse.component.css
+++ b/src/app/components/nurse/nurse.component.css
@@ -91,3 +91,6 @@ table th:last-child {
     border-radius: 0;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
+.tdc{
+    text-align: center;
+}
