remove items from navbar, added confirm msg to adding a patient

--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -29,18 +29,18 @@ Profile
     Add patient options
     </a>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a [routerLink]="['/rooms']" class="nav-link link-dark">
         <i class="bi bi-door-open"></i>
       Assign patient to room
       </a>
-      </li>
-<li class="nav-item">
+      </li> -->
+<!-- <li class="nav-item">
 <a href="#" class="nav-link link-dark">
 <i class="bi bi-shield-lock"></i>
 Change password
 </a>
-</li>
+</li> -->
 <li class="nav-item">
 <a class="nav-link link-dark" (click)="logout()">
 <i class="bi bi-box-arrow-in-left"></i>
