--- a/src/app/components/patient-check-in/patient-check-in.component.html
+++ b/src/app/components/patient-check-in/patient-check-in.component.html
@@ -12,9 +12,6 @@
                                 <img src="/assets/img/WellNetLogo.jpg" alt="">
                             </div>
                             <h4 class="mb-4">New patient</h4>
-   
-   
-   <p><span class = "asterix">*</span> marks required fields.</p>
        
         <form
         
@@ -23,6 +20,7 @@
         (ngSubmit)= "onSubmit(firstName, lastName, dob, feet, inches, weight, bloodtype, sex, allergies, vaccinations)">  
 
         <div style="width: 50%;">
+            <p style="text-align: right;"><span class = "asterix" >*</span> marks required fields.</p>
             <span class = "asterix">*</span><label for= "firstName">First Name:</label>
             <input
                 type= "text"
@@ -111,11 +109,31 @@
                     <option value="NB">Other</option>
                 </select>
             <br>
-            <u><h5> Allergies: </h5></u>
-            <div id = "allergyanchor"></div>
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item">
+                    <u><h5> Allergies: </h5></u>
+                    <div id = "allergyanchor"></div>
+                </li>
+                <li class="list-group-item">
+                    <u><h5> Vaccinations:</h5></u>
+                    <div id = "vaccinationanchor"></div>
+                </li>
+            </ul>
             <br>
-            <div id = "vaccinationanchor">Vaccinations:</div>
-            <button type= "submit" class= "btn btn-outline-success mt-3">Add Patient</button>
+            <div class="row">
+                <div class="col-4">
+                    <button type= "submit" class= "btn btn-outline-success mt-3">Add Patient</button>
+                </div>
+                <div class="col-8">
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert" [hidden]="hiddenmsg">
+                        <strong>Patient created successfully</strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    
+                    </div>
+
+                </div>
+            </div>
+            
         </div>
         
     </form>
