--- a/src/app/components/forum-post/forum-post.component.css
+++ b/src/app/components/forum-post/forum-post.component.css
@@ -3,6 +3,10 @@
     height: 70vh;
 }
 
+#buttons {
+    text-align: center;
+}
+
 .overflow-auto {
     overflow-y: scroll;
     overflow-x: hidden !important;
@@ -11,7 +15,6 @@
 .post {
     text-align: center;
     padding: 1%;
-    height: 100%;
 }
 
 .card {
