--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,27 +1,19 @@
 <h4 id="title m-2">
-    {{ post.posted | date : 'shortDate' }}: {{ post.author }}
+    {{ post.posted | date : 'short' }} - {{ post.author }}
     <br>{{ post.title }}
 </h4>
 <h5 id="description m-2">{{ post.description }}</h5>
 <hr>
 <div class="overflow-auto" style="height: {{size}}">
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
-    <p>test line</p>
+    <div class="container">
+        <div class="row" *ngFor="let com of comments | reverse">
+            <div class="col-3">
+                <p>{{ com.created | date : 'short' }}-{{ com.author }}:</p>
+            </div>
+
+            <div class="col">
+                <p>{{ com.body }}</p>
+            </div>
+        </div>
+    </div>
 </div>
