--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -40,7 +40,7 @@ $WellNet-dark-theme: mat.define-dark-theme((
   span.mat-slide-toggle-thumb{
     background-color: #239507;
   }
-
+  
   .mainbox{
     background: black;
     color:white;
@@ -52,9 +52,26 @@ $WellNet-dark-theme: mat.define-dark-theme((
     background-position: right;
     background-repeat: no-repeat;
   }
-   
+
 .table-striped{
   color: white;
+}
+.bi-bandaid{
+  color: white;
+}
+.accountCard {
+   
+  border-radius: 25px;
+  text-align: center;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  color: white;
+  box-shadow: 1.5px 4px 3px 4px #888888;
+  background-color: rgba(86, 102, 117, 0);
+
+
 }
 .list-group-item{
   background: #1d1e1c;
@@ -64,6 +81,9 @@ $WellNet-dark-theme: mat.define-dark-theme((
 .h100{
   background: black;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(57, 126, 61, 0.6) !important;
+}
+.table{
+  --bs-table-striped-color: white;
 }
 
 img{
