--- a/src/app/components/profile-edit/profile-edit.component.html
+++ b/src/app/components/profile-edit/profile-edit.component.html
@@ -13,19 +13,31 @@
                           <div class="mb-5">
                               <img src="/assets/img/WellNetLogo.jpg" alt="">
                           </div>
-
+        
+      
         <h4 class="mb-4">Edit Information</h4>
             <div class="form-group col-4 mb-3">
-                <label for="firstName">First name</label>
+                <label for="firstName">First name: </label>
                 <input type="text" class="form-control" #firstname id="firstName" maxlength="20"
                  name="firstName" placeholder="Change your first name">
 
             </div>
             <div class="form-group mb-4 col-4">
-                <label for="lastName">Last name</label>
+                <label for="lastName">Last name: </label>
                 <input type="text" class="form-control" #lastname id="lastName" maxlength="20"
                   name="lastName" placeholder="Change your last name" >
-                
+            </div>
+
+            <div class="form-group col-4 mb-3">
+                <label for="specialization" id="specialization" >Select Specialization:</label>
+                <select type="select" name="specialization" #specialization id="specialization">
+                  <option value="primary_care">Primary Care</option>
+                  <option value="pediatrician">Pediatrician</option>
+                  <option value="radiologist">Radiologist</option>
+                  <option value="general_surgeon">General Surgeon</option>
+                  
+                  </select>
+
             </div>
 
             <!-- <div id="RoleRadios">
@@ -59,9 +71,7 @@
   
 
     <button text="Submit" class="btn btn-outline-success"
-        (click)="submit(firstname.value, lastname.value)">Submit</button>
-
-
+        (click)="submit(firstname.value, lastname.value, specialization.value)">Submit</button>
 
       </div>
     </div>
