Edit and delete functionality

--- a/src/app/components/forum-post/forum-post.component.css
+++ b/src/app/components/forum-post/forum-post.component.css
@@ -23,8 +23,8 @@
 
 .card:hover {
     cursor: pointer;
-    /* transform: scale(110%);
-    transition: 0.5s; */
+    transform: scale(110%);
+    transition: 0.5s;
 }
 
 button {
