inserting specialization field on profile

--- a/src/app/components/profile-edit/profile-edit.component.html
+++ b/src/app/components/profile-edit/profile-edit.component.html
@@ -28,9 +28,9 @@
                   name="lastName" placeholder="Change your last name" >
             </div>
 
-            <div class="form-group col-4 mb-3">
-                <label for="specialization" id="specialization" >Select Specialization:</label>
-                <select type="select" name="specialization" #specialization id="specialization">
+            <div>
+                <label for="specialization">Select Specialization: </label>
+                <select name="specialization" #specialization id="specialization">
                   <option value="primary_care">Primary Care</option>
                   <option value="pediatrician">Pediatrician</option>
                   <option value="radiologist">Radiologist</option>
