--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -31,6 +31,10 @@
                 <td id = "role"></td>
             </tr>
             <tr>
+                <td>Specialization:</td>
+                <td id = "specialization"></td>
+            </tr>
+            <tr>
                 <td>Email:</td>
                 <td id = "email"></td>
             </tr>
