--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -35,7 +35,7 @@
                                     <a  (click)="register()" >Register for a new account</a>
                                 </li>
                                 <li>
-                                    <a  (click)="forgetPassword()">Forget password?</a>
+                                    <a  (click)="forgetPassword()">Forgot password?</a>
                                 </li>
                             </ul>
                           </div>
